tests/globals/valid/fun_shadowed_by_variable.amu
s32 foo() {
    return 3;
}

main :: () -> s32 {
    foo:s32 = 5;
    return foo;
}