tests/globals/invalid/var_redefined_as_fun.amu
foo:s32 = 4;

s32 foo() {
    return 3;
}

main :: () -> s32 {
    return foo;
}